# conways-game-of-death

./: CMakeLists.txt  README.md  cell.c++  cell.h  gen.c++  gen.h  main.c++
